# benchmarkRAG

./: .gitignore  benchmark.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
src/: benchmark_loader.py  data_loader.py  dataset_registry.py  embedding.py  metrics.py  msmarco_loader.py  search.py  vectorstore.py
src/vectorstore/: base.py  faiss_store.py  lancedb_store.py  qdrant_store.py
